vlib/v/checker/tests/inout/mod_op_wrong_right_type_err_b.out
vlib/v/checker/tests/inout/mod_op_wrong_right_type_err_b.v:2:6: error: right type of `%` cannot be non-integer type array_int
    1| fn main() {
    2|     1 % [1,2,3]
               ~~~~~~~
    3| }
